@@ -1,2 +1,3 @@
 DIST forge-3.1.2.tar.gz 222873 SHA256 de4c579d99af98de97d25de2f6d6f670059a0fc8c6f9e41ec66d62226ae25fe2 SHA512 cbc9a754ef3110120cffe0882321bc236e0f655f95b2115203c98743bd39bac870bd866eeddf923497370c497dc349fd394dc84f77eb3f8b30b64d9b3173e377 WHIRLPOOL cef87e41c39b0314f570dff4ef3639bf3dd5d045088f5e5fb8fb09aef0c014a25ef7ea65d5d2af67ddf27de8e031f89066e8dfd1124edc93703c5af696684a16
 DIST forge-3.2.0.tar.gz 234511 SHA256 512067be7e08e064c952b4cdb7a47e39f48f4606b47fc68c2a7a8ba16e8f70ed SHA512 58fdbb32c3a8a193ea556d3ed314d67049aaea128b98bd222f8261a7b29a6a9ce31a2384fb59e76a4b62bc57edcd278de573e4ab6bab5d34da97fc7bf46ead73 WHIRLPOOL 83f6ab24a85573dddcda99707884c78d7c67de3b40a0779dae0212ac466b5fe2b4dff8a646be066413822bbc96b72a990569f3f6ce6181f21283ac4719b16130
+DIST forge-3.2.1.tar.gz 232244 SHA256 e0b1abcc3b9e1693140add9c674e021d35b64e3029241cfe7a7d73a1a2660ad3 SHA512 5c9429c010b9e5be8e8d1d264764b9bf24d83b414a38d4a212ba3d39841dd6cc7d0425972f2596994cbe5423299fdc9689649f00bc2e8b41d1a51fb1b7449aea WHIRLPOOL cb6481284966a28743bfb6ccee8a1185fd83961799f733eeef912048dfcc22c0224ab3e0095d7d83a7e62f8387a2c183faa2d925d4ed96c946441150d6373c46
